--- a/Statistics/index.html
+++ b/Statistics/index.html
@@ -21,9 +21,10 @@
                         <th scope="col">№</th>
                         <th scope="col">Theme</th>
                         <th scope="col">Problem name</th>
+                        <th scope="col">Difficulty</th>
                         <th scope="col">Solution</th>
                         <th scope="col">Date</th>
-                        <th scope="col">Materials</th>
+                        <th scope="col">Additional info</th>
                     </tr>
                 </thead>
 
@@ -32,16 +33,29 @@
                         <th scope="row">33</th>
                         <td>Array</td>
                         <td><a href="https://leetcode.com/problems/search-in-rotated-sorted-array/description/">Search in Rotated Sorted Array</a></td>
-                        <td>Array/33_Search_in_Rotated_Sorted_Array.py</td>
+                        <td><a href="https://github.com/adilkhash/leetcode/blob/master/Array/33_Search_in_Rotated_Sorted_Array.py">33_Search_in_Rotated_Sorted_Array.py</a></td>
+                        <td><span class="badge badge-warning">Medium</span></td>
                         <td>25.03.2018</td>
                         <td>
                             <ul>
-                                <li><a href="https://www.youtube.com/watch?v=uufaK2uLnSI&t=8s">Search element in a circular sorted array
-
-</a></li>
+                                <li><a href="https://www.youtube.com/watch?v=uufaK2uLnSI&t=8s">Search element in a circular sorted array</a></li>
                             </ul>
                         </td>
                     </tr>
+                    <tr>
+                        <th scope="row">283</th>
+                        <td>Array</td>
+                        <td><a href="https://leetcode.com/problems/move-zeroes/description/">Move Zeroes</a></td>
+                        <td><a href="https://github.com/adilkhash/leetcode/blob/master/Array/283_Move_Zeroes.py">283_Move_Zeroes.py</a></td>
+                        <td><span class="badge badge-success">Easy</span></td>
+                        <td>25.03.2018</td>
+                        <td>
+                            <ul>
+                                <li>Asked @ Yandex</li>
+                            </ul>
+                        </td>
+                    </tr>
+
                 </tbody>
             </table>
 
