--- a/Statistics/index.html
+++ b/Statistics/index.html
@@ -55,6 +55,17 @@
                             </ul>
                         </td>
                     </tr>
+                    <tr>
+                        <th scope="row">238</th>
+                        <td>Array</td>
+                        <td><a href="https://leetcode.com/problems/product-of-array-except-self/description/">Product of Array Except Self</a></td>
+                        <td><a href="https://github.com/adilkhash/leetcode/blob/master/Array/238_Product_of_Array_Except_Self.py">238_Product_of_Array_Except_Self.py</a></td>
+                        <td><span class="badge badge-warning">Medium</span></td>
+                        <td>25.03.2018</td>
+                        <td>
+
+                        </td>
+                    </tr>
 
                 </tbody>
             </table>
