--- a/Statistics/index.html
+++ b/Statistics/index.html
@@ -62,11 +62,21 @@
                         <td><a href="https://github.com/adilkhash/leetcode/blob/master/Array/238_Product_of_Array_Except_Self.py">238_Product_of_Array_Except_Self.py</a></td>
                         <td><span class="badge badge-warning">Medium</span></td>
                         <td>25.03.2018</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th scope="row">27</th>
+                        <td>Array</td>
+                        <td><a href="https://leetcode.com/problems/remove-element/description/">Remove Element</a></td>
+                        <td><a href="https://github.com/adilkhash/leetcode/blob/master/Array/27_Remove_Element.py">27_Remove_Element.py</a></td>
+                        <td><span class="badge badge-success">Easy</span></td>
+                        <td>25.03.2018</td>
                         <td>
-
+                            <ul>
+                                <li>Asked @ Yandex</li>
+                            </ul>
                         </td>
                     </tr>
-
                 </tbody>
             </table>
 
