--- a/Statistics/index.html
+++ b/Statistics/index.html
@@ -77,6 +77,20 @@
                             </ul>
                         </td>
                     </tr>
+                    <tr>
+                        <th scope="row">268</th>
+                        <td>Array</td>
+                        <td><a href="https://leetcode.com/problems/missing-number/description/">Missing Number</a></td>
+                        <td><a href="https://github.com/adilkhash/leetcode/blob/master/Array/268_Missing_Number.py">268_Missing_Number.py</a></td>
+                        <td><span class="badge badge-success">Easy</span></td>
+                        <td>25.03.2018</td>
+                        <td>
+                            <ul>
+                                <li><a href="https://www.geeksforgeeks.org/find-the-missing-number/">Find the Missing Number - GeeksforGeeks</a></li>
+                            </ul>
+                        </td>
+                    </tr>
+
                 </tbody>
             </table>
 
