--- a/Statistics/index.html
+++ b/Statistics/index.html
@@ -90,6 +90,16 @@
                             </ul>
                         </td>
                     </tr>
+                    <tr>
+                        <th scope="row">35</th>
+                        <td>Array</td>
+                        <td><a href="https://leetcode.com/problems/search-insert-position/description/">Search Insert Position</a></td>
+                        <td><a href="https://github.com/adilkhash/leetcode/blob/master/Array/35_Search_Insert_Position.py">35_Search_Insert_Position.py</a></td>
+                        <td><span class="badge badge-success">Easy</span></td>
+                        <td>25.03.2018</td>
+                        <td>
+                        </td>
+                    </tr>
 
                 </tbody>
             </table>
