--- a/Statistics/index.html
+++ b/Statistics/index.html
@@ -100,6 +100,16 @@
                         <td>
                         </td>
                     </tr>
+                    <tr>
+                        <th scope="row">485</th>
+                        <td>Array</td>
+                        <td><a href="https://leetcode.com/problems/max-consecutive-ones/description/">Max Consecutive Ones</a></td>
+                        <td><a href="https://github.com/adilkhash/leetcode/blob/master/Array/485_Max_Consecutive_Ones.py">485_Max_Consecutive_Ones.py</a></td>
+                        <td><span class="badge badge-success">Easy</span></td>
+                        <td>25.03.2018</td>
+                        <td>
+                        </td>
+                    </tr>
 
                 </tbody>
             </table>
