--- a/Statistics/index.html
+++ b/Statistics/index.html
@@ -110,6 +110,16 @@
                         <td>
                         </td>
                     </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>Linked List</td>
+                        <td><a href="https://leetcode.com/problems/add-two-numbers/description/">Add Two Numbers</a></td>
+                        <td><a href="https://github.com/adilkhash/leetcode/blob/master/Linked List/2_Add_Two_Numbers.py">2_Add_Two_Numbers.py</a></td>
+                        <td><span class="badge badge-warning">Medium</span></td>
+                        <td>12.2017</td>
+                        <td>
+                        </td>
+                    </tr>
 
                 </tbody>
             </table>
