--- a/Statistics/index.html
+++ b/Statistics/index.html
@@ -120,6 +120,16 @@
                         <td>
                         </td>
                     </tr>
+                    <tr>
+                        <th scope="row">125</th>
+                        <td>String</td>
+                        <td><a href="https://leetcode.com/problems/valid-palindrome/description/">Valid Palindrome</a></td>
+                        <td><a href="https://github.com/adilkhash/leetcode/blob/master/String/125_Valid_Palindrome.py">125_Valid_Palindrome.py</a></td>
+                        <td><span class="badge badge-success">Easy</span></td>
+                        <td>12.2017</td>
+                        <td>
+                        </td>
+                    </tr>
 
                 </tbody>
             </table>
