--- a/Statistics/index.html
+++ b/Statistics/index.html
@@ -186,6 +186,37 @@
                         <td>
                         </td>
                     </tr>
+                    <tr>
+                        <th scope="row">142</th>
+                        <td>Linked List</td>
+                        <td><a href="https://leetcode.com/problems/linked-list-cycle-ii/description/">Linked List Cycle II</a></td>
+                        <td><a href="https://github.com/adilkhash/leetcode/blob/master/Linked List/142_Linked_List_Cycle_II.py">142_Linked_List_Cycle_II.py</a></td>
+                        <td><span class="badge badge-warning">Medium</span></td>
+                        <td>28.03.2018</td>
+                        <td>
+                            <ul>
+                                <li>
+                                    <a href="https://www.youtube.com/watch?v=iZVBVCpmugI">Finding a beginning of a loop in a linked list. Leetcode #142 (medium) task</a>
+                                </li>
+                            </ul>
+                        </td>
+                        <td>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">287</th>
+                        <td>Array</td>
+                        <td><a href="https://leetcode.com/problems/find-the-duplicate-number/description/">Find the Duplicate Number</a></td>
+                        <td><a href="https://github.com/adilkhash/leetcode/blob/master/Array/287_Find_the_Duplicate_Number.py">287_Find_the_Duplicate_Number.py</a></td>
+                        <td><span class="badge badge-warning">Medium</span></td>
+                        <td>29.03.2018</td>
+                        <td>
+                        </td>
+                        <td>
+                            Решение аналогично решению задачи <strong>Linked List Cycle II</strong>, но здесь в качестве указателей на следующий "связанный список" используются индексы массива.
+                            В условии задачи явно сказано, что значения в массиве находятся в диапазоне от 1 до n включительно, что даёт нам уверенность в выборе такого способа решения задачи.
+                        </td>
+                    </tr>
 
                 </tbody>
             </table>
