--- a/Statistics/index.html
+++ b/Statistics/index.html
@@ -217,6 +217,20 @@
                             В условии задачи явно сказано, что значения в массиве находятся в диапазоне от 1 до n включительно, что даёт нам уверенность в выборе такого способа решения задачи.
                         </td>
                     </tr>
+                    <tr>
+                        <th scope="row">621</th>
+                        <td>Array</td>
+                        <td><a href="https://leetcode.com/problems/task-scheduler/description/">621. Task Scheduler</a></td>
+                        <td><a href="https://github.com/adilkhash/leetcode/blob/master/Array/621_Task_Scheduler.py">621_Task_Scheduler.py</a></td>
+                        <td><span class="badge badge-warning">Medium</span></td>
+                        <td>31.03.2018</td>
+                        <td>
+                        </td>
+                        <td>
+                            Решение базируется на постоянной сортировке массива с количеством задач. Неоптимальным местом является постоянная проверка на наличие оставшихся задач.
+                            Позже попробую решить через Priority Queue.
+                        </td>
+                    </tr>
 
                 </tbody>
             </table>
