--- a/Statistics/index.html
+++ b/Statistics/index.html
@@ -220,7 +220,7 @@
                     <tr>
                         <th scope="row">621</th>
                         <td>Array</td>
-                        <td><a href="https://leetcode.com/problems/task-scheduler/description/">621. Task Scheduler</a></td>
+                        <td><a href="https://leetcode.com/problems/task-scheduler/description/">Task Scheduler</a></td>
                         <td><a href="https://github.com/adilkhash/leetcode/blob/master/Array/621_Task_Scheduler.py">621_Task_Scheduler.py</a></td>
                         <td><span class="badge badge-warning">Medium</span></td>
                         <td>31.03.2018</td>
@@ -229,6 +229,19 @@
                         <td>
                             Решение базируется на постоянной сортировке массива с количеством задач. Неоптимальным местом является постоянная проверка на наличие оставшихся задач.
                             Позже попробую решить через Priority Queue.
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">153</th>
+                        <td>Array</td>
+                        <td><a href="https://leetcode.com/problems/find-minimum-in-rotated-sorted-array/description/">Find Minimum in Rotated Sorted Array</a></td>
+                        <td><a href="https://github.com/adilkhash/leetcode/blob/master/Array/153_Find_Minimum_in_Rotated_Sorted_Array.py">153_Find_Minimum_in_Rotated_Sorted_Array.py</a></td>
+                        <td><span class="badge badge-warning">Medium</span></td>
+                        <td>31.03.2018</td>
+                        <td>
+                        </td>
+                        <td>
+                            Задача базируется на №33 — Search in Rotated Sorted Array.
                         </td>
                     </tr>
 
