--- a/Statistics/index.html
+++ b/Statistics/index.html
@@ -225,6 +225,9 @@
                         <td><span class="badge badge-warning">Medium</span></td>
                         <td>31.03.2018</td>
                         <td>
+                            <ul>
+                                <li><a href="https://www.youtube.com/watch?v=tFAtcX_YUoY">Baozi Training Leetcode 621 solution: Task Scheduler</a></li>
+                            </ul>
                         </td>
                         <td>
                             Решение базируется на постоянной сортировке массива с количеством задач. Неоптимальным местом является постоянная проверка на наличие оставшихся задач.
