--- a/Statistics/index.html
+++ b/Statistics/index.html
@@ -247,6 +247,19 @@
                             Задача базируется на №33 — Search in Rotated Sorted Array.
                         </td>
                     </tr>
+                    <tr>
+                        <th scope="row">81</th>
+                        <td>Array</td>
+                        <td><a href="https://leetcode.com/problems/search-in-rotated-sorted-array-ii/">Search in Rotated Sorted Array II</a></td>
+                        <td><a href="https://github.com/adilkhash/leetcode/blob/master/Array/81_Search_in_Rotated_Sorted_Array_II.py">81_Search_in_Rotated_Sorted_Array_II.py</a></td>
+                        <td><span class="badge badge-warning">Medium</span></td>
+                        <td>02.04.2018</td>
+                        <td>
+                        </td>
+                        <td>
+                            Задача базируется на №33 — Search in Rotated Sorted Array. Worst case здесь O(n), если в массиве очень много повторяющейся цифры.
+                        </td>
+                    </tr>
 
                 </tbody>
             </table>
