--- a/Statistics/index.html
+++ b/Statistics/index.html
@@ -260,6 +260,18 @@
                             Задача базируется на №33 — Search in Rotated Sorted Array. Worst case здесь O(n), если в массиве очень много повторяющейся цифры.
                         </td>
                     </tr>
+                    <tr>
+                        <th scope="row">88</th>
+                        <td>Array</td>
+                        <td><a href="https://leetcode.com/problems/merge-sorted-array/">Merge Sorted Array</a></td>
+                        <td><a href="https://github.com/adilkhash/leetcode/blob/master/Array/88_Merge_Sorted_Array.py">88_Merge_Sorted_Array.py</a></td>
+                        <td><span class="badge badge-success">Easy</span></td>
+                        <td>23.12.2018</td>
+                        <td>
+                        </td>
+                        <td>
+                        </td>
+                    </tr>
 
                 </tbody>
             </table>
